# shrimpli

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20240101000000_create_urls_table.sql
backend/src/: db.rs  handlers.rs  main.rs  models.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
